--- a/app/views/dashboards/overviews/_partials/services_summary.html
+++ b/app/views/dashboards/overviews/_partials/services_summary.html
@@ -21,7 +21,9 @@
             aria-expanded="false"
             ng-csv="export('services')"
             csv-header="exports.services.headers"
-            filename="services_overview_reports_{{filters.startedAt | date:settings.dateFormat}}_{{filters.endedAt | date:settings.dateFormat}}.csv"
+            filename="services_overview_reports_{{
+              filters.startedAt | date: settings.dateFormat
+            }}_{{ filters.endedAt | date: settings.dateFormat }}.csv"
           >
             Export
           </a>
@@ -106,7 +108,7 @@
                 <th
                   title="Average Time Taken to Attend a Customer(Call) Service Request"
                 >
-                  Average Attend Time
+                  Average Call Time
                 </th>
                 <th title="Average Time Taken to a Resolve Service Request">
                   Average Resolve Time
@@ -115,40 +117,40 @@
             </thead>
             <tbody>
               <tr ng-repeat="service in overviews.services">
-                <td title="{{service.name}}">
-                  {{service.name.en}}
+                <td title="{{ service.name }}">
+                  {{ service.name.en }}
                 </td>
-                <td title="{{service.count | number:0}}">
-                  {{service.count | number:0}}
+                <td title="{{ service.count | number: 0 }}">
+                  {{ service.count | number: 0 }}
                 </td>
-                <td title=" {{service.pending | number:0}}">
-                  {{service.pending | number:0}}
+                <td title=" {{ service.pending | number: 0 }}">
+                  {{ service.pending | number: 0 }}
                 </td>
-                <td title=" {{service.resolved | number:0}}">
-                  {{service.resolved | number:0}}
+                <td title=" {{ service.resolved | number: 0 }}">
+                  {{ service.resolved | number: 0 }}
                 </td>
-                <td title=" {{service.late | number:0}}">
-                  {{service.late | number:0}}
+                <td title=" {{ service.late | number: 0 }}">
+                  {{ service.late | number: 0 }}
                 </td>
                 <td>
                   <span>
-                    {{service.averageAttendTime.minutes}}
+                    {{ service.callTime.average.minutes }}
                     <span class="text-muted text-xs">mins</span>
                   </span>
                   <span>
-                    {{service.averageAttendTime.seconds}}
+                    {{ service.callTime.average.seconds }}
                     <span class="text-muted text-xs">secs</span>
                   </span>
                 </td>
                 <td>
                   <!-- Fix here-->
                   <span>
-                    {{service.averageResolveTime.hours +
-                    (service.averageResolveTime.days * 24)}}
+                    {{ service.resolveTime.average.hours +
+                    service.resolveTime.average.days * 24 }}
                     <span class="text-muted text-xs">hrs</span>
                   </span>
                   <span>
-                    {{service.averageResolveTime.minutes}}
+                    {{ service.resolveTime.average.minutes }}
                     <span class="text-muted text-xs">mins</span>
                   </span>
                 </td>
