--- a/app/views/dashboards/overviews/_partials/overall_summary.html
+++ b/app/views/dashboards/overviews/_partials/overall_summary.html
@@ -5,7 +5,7 @@
     <div class="padding">
       <div class="text-center">
         <h2 class="text-center _600 m-t-md">
-          {{overviews.overall.count | number:0}}
+          {{ overviews.overall.count | number: 0 }}
         </h2>
         <p class="text-muted m-b-md">Total</p>
       </div>
@@ -20,12 +20,12 @@
         <span
           class="pull-right"
           ng-class="overviews.overall.percentagePending <= 50 ? 'text-success' : 'text-danger'"
-          >{{overviews.overall.percentagePending | number:2}}%</span
+          >{{ overviews.overall.percentagePending | number: 2 }}%</span
         >
       </div>
       <div class="text-center">
         <h2 class="text-center _600 m-t-md">
-          {{overviews.overall.pending | number:0}}
+          {{ overviews.overall.pending | number: 0 }}
         </h2>
         <p class="text-muted m-b-md">Pending</p>
       </div>
@@ -40,12 +40,12 @@
         <span
           class="pull-right"
           ng-class="overviews.overall.percentageResolved >= 50 ? 'text-success' : 'text-danger'"
-          >{{overviews.overall.percentageResolved | number:2}}%</span
+          >{{ overviews.overall.percentageResolved | number: 2 }}%</span
         >
       </div>
       <div class="text-center">
         <h2 class="text-center _600 m-t-md">
-          {{overviews.overall.resolved | number:0}}
+          {{ overviews.overall.resolved | number: 0 }}
         </h2>
         <p class="text-muted m-b-md">Resolved</p>
       </div>
@@ -63,12 +63,12 @@
         <span
           class="pull-right"
           ng-class="overviews.overall.percentageLate > 0 ? 'text-danger' : 'text-success'"
-          >{{overviews.overall.percentageLate | number:2}}%</span
+          >{{ overviews.overall.percentageLate | number: 2 }}%</span
         >
       </div>
       <div class="text-center">
         <h2 class="text-center _600 m-t-md">
-          {{overviews.overall.late | number:0}}
+          {{ overviews.overall.late | number: 0 }}
         </h2>
         <p class="text-muted m-b-md">Late</p>
       </div>
@@ -85,15 +85,15 @@
       <div class="text-center">
         <h2 class="text-center _600 m-t-md">
           <span title="Average Attend Time(Call Duration) - Minutes Spent">
-            {{overviews.overall.averageAttendTime.minutes}}
+            {{ overviews.overall.callTime.average.minutes }}
             <span class="text-muted text-xs">mins</span>
           </span>
           <span title="Average Attend Time(Call Duration) - Seconds Spent">
-            {{overviews.overall.averageAttendTime.seconds}}
+            {{ overviews.overall.callTime.average.seconds }}
             <span class="text-muted text-xs">secs</span>
           </span>
         </h2>
-        <p class="text-muted m-b-md">Average Attend Time</p>
+        <p class="text-muted m-b-md">Average Call Time</p>
       </div>
     </div>
   </div>
@@ -105,12 +105,12 @@
       <div class="text-center">
         <h2 class="text-center _600 m-t-md">
           <span title="Average resolve Time - Hourss Spent">
-            {{overviews.overall.averageResolveTime.hours +
-            (overviews.overall.averageResolveTime.days * 24)}}
+            {{ overviews.overall.resolveTime.average.hours +
+            overviews.overall.resolveTime.average.days * 24 }}
             <span class="text-muted text-xs">hrs</span>
           </span>
           <span title="Average resolve Time - Minutes Spent">
-            {{overviews.overall.averageResolveTime.minutes}}
+            {{ overviews.overall.resolveTime.average.minutes }}
             <span class="text-muted text-xs">mins</span>
           </span>
         </h2>
