refactor: migrate performance report to v0.5.0 analytics

--- a/app/views/dashboards/performance/_partials/average_time_summary.html
+++ b/app/views/dashboards/performance/_partials/average_time_summary.html
@@ -7,15 +7,15 @@
       <div class="text-center">
         <h2 class="text-center _600 m-t-md">
           <span title="Average Attend Time(Call Duration) - Minutes Spent">
-            {{performances.overall.averageAttendTime.minutes}}
+            {{ performances.overall.callTime.average.minutes }}
             <span class="text-muted text-xs">mins</span>
           </span>
           <span title="Average Attend Time(Call Duration) - Seconds Spent">
-            {{performances.overall.averageAttendTime.seconds}}
+            {{ performances.overall.callTime.average.seconds }}
             <span class="text-muted text-xs">secs</span>
           </span>
         </h2>
-        <p class="text-muted m-b-md">Average Attend Time</p>
+        <p class="text-muted m-b-md">Average Call Time</p>
       </div>
     </div>
   </div>
@@ -28,15 +28,15 @@
       <div class="text-center">
         <h2 class="text-center _600 m-t-md">
           <span title="Average resolve Time - Days Spent">
-            {{performances.overall.averageResolveTime.days}}
+            {{ performances.overall.resolveTime.average.days }}
             <span class="text-muted text-xs">days</span>
           </span>
           <span title="Average resolve Time - Hours Spent">
-            {{performances.overall.averageResolveTime.hours}}
+            {{ performances.overall.resolveTime.average.hours }}
             <span class="text-muted text-xs">hrs</span>
           </span>
           <span title="Average resolve Time - Minutes Spent">
-            {{performances.overall.averageResolveTime.minutes}}
+            {{ performances.overall.resolveTime.average.minutes }}
             <span class="text-muted text-xs">mins</span>
           </span>
         </h2>
