--- a/app/views/dashboards/overviews/index.html
+++ b/app/views/dashboards/overviews/index.html
@@ -80,8 +80,8 @@
 
     <!-- start methods summary -->
     <ng-include
-      ng-if="overviews.methods  && overviews.methods.length > 0"
-      src="'views/dashboards/overviews/_partials/methods_summary.html'"
+      ng-if="overviews.channels  && overviews.channels.length > 0"
+      src="'views/dashboards/overviews/_partials/channels_summary.html'"
     ></ng-include>
     <!-- end methods summary -->
 
