--- a/app/views/dashboards/performance/index.html
+++ b/app/views/dashboards/performance/index.html
@@ -3,7 +3,7 @@
   <div class="navbar">
     <!-- start report title -->
     <div class="navbar-item pull-left h5 text-md">
-      Performance
+      Performance - Report
     </div>
     <!-- end report title -->
     <!-- start report actions -->
@@ -38,7 +38,7 @@
     ></ng-include>
     <!-- end jurisdiction summary and (ttr & att) -->
 
-    <!-- start overal and pipeline summary -->
+    <!-- start overall and pipeline summary -->
     <div class="row no-gutter">
       <div class="col-xs-12 col-sm-6 col-md-6">
         <!-- start of area overall summary -->
