refactor: remove duplicate title on a single component

--- a/app/views/auth/profile.html
+++ b/app/views/auth/profile.html
@@ -15,12 +15,9 @@
           ng-click="showFilter()"
           class="nav-link"
           aria-expanded="false"
-          title="Click to Filter Report"
+          title="Click To Filter Report"
         >
-          <i
-            class="ion-android-funnel w-24"
-            title="Click To Filter Reports"
-          ></i>
+          <i class="ion-android-funnel w-24"></i>
         </a>
       </li>
       <!-- end filter -->
