--- a/app/views/auth/_partials/overall_summary.html
+++ b/app/views/auth/_partials/overall_summary.html
@@ -84,13 +84,13 @@
                 <span
                   title="Average Attend Time(Call Duration) - Minutes Spent"
                 >
-                  {{ performances.overall.averageAttendTime.minutes }}
+                  {{ performances.overall.attendTime.average.minutes }}
                   <span class="text-muted text-xs">mins</span>
                 </span>
                 <span
                   title="Average Attend Time(Call Duration) - Seconds Spent"
                 >
-                  {{ performances.overall.averageAttendTime.seconds }}
+                  {{ performances.overall.attendTime.average.seconds }}
                   <span class="text-muted text-xs">secs</span>
                 </span>
               </h2>
@@ -106,12 +106,12 @@
             <div class="text-center">
               <h2 class="text-center _600 m-t-md">
                 <span title="Average resolve Time - Hourss Spent">
-                  {{ performances.overall.averageResolveTime.hours +
-                  performances.overall.averageResolveTime.days * 24 }}
+                  {{ performances.overall.resolveTime.average.hours +
+                  performances.overall.resolveTime.average.days * 24 }}
                   <span class="text-muted text-xs">hrs</span>
                 </span>
                 <span title="Average resolve Time - Minutes Spent">
-                  {{ performances.overall.averageResolveTime.minutes }}
+                  {{ performances.overall.resolveTime.average.minutes }}
                   <span class="text-muted text-xs">mins</span>
                 </span>
               </h2>
