--- a/app/views/servicerequests/_partials/comments.html
+++ b/app/views/servicerequests/_partials/comments.html
@@ -38,18 +38,18 @@
         <div class="sl-content">
           <div class="sl-date text-muted">
             <span class="text-info">
-              {{comment.changer.name}}
+              {{ comment.changer.name }}
             </span>
-            on {{comment.createdAt | date:'dd MMM yyyy hh:mm:ss a'}}
+            on {{ comment.createdAt | date: 'dd MMM yyyy hh:mm:ss a' }}
           </div>
-          <p ng-if="comment.comment">{{comment.comment}}</p>
+          <p ng-if="comment.comment">{{ comment.comment }}</p>
           <p ng-if="comment.item">
-            Used {{comment.quantity}} - {{comment.item.properties.unit}} of
-            {{comment.item.name.en}}
+            Used {{ comment.quantity }} - {{ comment.item.properties.unit }} of
+            {{ comment.item.name.en }}
           </p>
           <p ng-if="comment.location && comment.location.coordinates">
-            Change location to longitude: {{comment.location.coordinates[0]}},
-            latitude: {{comment.location.coordinates[1]}}
+            Change location to longitude: {{ comment.location.coordinates[0] }},
+            latitude: {{ comment.location.coordinates[1] }}
           </p>
           <p ng-if="comment.status && comment.status.name">
             Change status to
@@ -61,7 +61,7 @@
                 class="arrow left b-success pull-in"
                 ng-style="comment.status ? {'border-color': comment.status.color} : {}"
               ></b>
-              {{comment.status.name}}
+              {{ comment.status.name }}
             </span>
           </p>
           <p ng-if="comment.priority && comment.priority.name">
@@ -74,11 +74,11 @@
                 class="arrow left b-success pull-in"
                 ng-style="comment.priority ? {'border-color': comment.priority.color} : {}"
               ></b>
-              {{comment.priority.name}}
+              {{ comment.priority.name }}
             </span>
           </p>
           <p ng-if="comment.assignee && comment.assignee.name">
-            Assignee to {{comment.assignee.name}}
+            Assign to {{ comment.assignee.name }}
           </p>
           <p ng-if="comment.resolvedAt">
             Change status to
@@ -160,22 +160,22 @@
           </p>
           <p ng-if="comment.image && comment.image.stream">
             <a
-              href="{{comment.image.stream}}"
+              href="{{ comment.image.stream }}"
               target="_blank"
-              title="{{comment.image.filename}}"
+              title="{{ comment.image.filename }}"
             >
-              <img data-ng-src="{{comment.image.stream}}" height="50px;" />
+              <img data-ng-src="{{ comment.image.stream }}" height="50px;" />
             </a>
           </p>
           <p ng-if="comment.document && comment.document.download">
             Attached
             <a
-              href="{{comment.document.download}}"
+              href="{{ comment.document.download }}"
               target="_blank"
-              title="{{comment.document.filename}}"
+              title="{{ comment.document.filename }}"
             >
               <span class="text-muted">
-                {{comment.document.filename}}
+                {{ comment.document.filename }}
               </span>
             </a>
           </p>
