fix(overview): update channel visualization on click all headers
               Ensure on click pending and resolved header update visualization

               close #58

--- a/app/views/dashboards/overviews/_partials/channels_summary.html
+++ b/app/views/dashboards/overviews/_partials/channels_summary.html
@@ -90,10 +90,16 @@
                 >
                   Total
                 </th>
-                <th title="Total Pending Count  of Service Requests">
+                <th
+                  ng-click="prepareChannelVisualization('pending')"
+                  title="Total Pending Count  of Service Requests"
+                >
                   Pending
                 </th>
-                <th title="Total Resolved Count of Service Requests">
+                <th
+                  ng-click="prepareChannelVisualization('resolved')"
+                  title="Total Resolved Count of Service Requests"
+                >
                   Resolved
                 </th>
               </tr>
