--- a/app/views/dashboards/overviews/_partials/operators_leaderboard.html
+++ b/app/views/dashboards/overviews/_partials/operators_leaderboard.html
@@ -13,6 +13,53 @@
     </div>
     <!-- end header -->
 
+    <!-- start toolbox -->
+    <div class="box-tool p-t-sm">
+      <!-- start time filters -->
+      <ul class="nav">
+        <!-- start export -->
+        <li class="nav-item inline">
+          <a
+            title="Click To Export"
+            class="btn btn-xs rounded white"
+            aria-expanded="false"
+            ng-csv="export('operators')"
+            csv-header="exports.operators.headers"
+            filename="operators_overview_reports_{{
+              filters.startedAt | date: settings.dateFormat
+            }}_{{ filters.endedAt | date: settings.dateFormat }}.csv"
+          >
+            Export
+          </a>
+        </li>
+        <!-- end export -->
+
+        <!-- start date filters -->
+        <li uib-dropdown class="nav-item inline dropdown" style="display:none">
+          <a
+            uib-dropdown-toggle
+            class="btn btn-xs rounded white dropdown-toggle"
+            aria-expanded="false"
+            >Today</a
+          >
+          <div
+            uib-dropdown-menu
+            class="dropdown-menu dropdown-menu-scale pull-right"
+          >
+            <a class="dropdown-item" href="">Last 24 hours</a>
+            <a class="dropdown-item" href="">Last 7 days</a>
+            <a class="dropdown-item" href="">Last month</a>
+            <a class="dropdown-item" href="">Last Year</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item">Today</a>
+          </div>
+        </li>
+        <!-- end date filters -->
+      </ul>
+      <!-- end time filters -->
+    </div>
+    <!-- end toolbox -->
+
     <div>
       <div class="row-col">
         <ul class="list inset m-a-0">
