fix(servicerequest): add type on detail view

--- a/app/views/servicerequests/_partials/detail.html
+++ b/app/views/servicerequests/_partials/detail.html
@@ -28,6 +28,11 @@
                 {{servicerequest.group.name}}
               </span>
               <br />
+              <span title="Issue Type">
+                <span class="text-muted font-size-10">Type</span>
+                {{servicerequest.type.name.en}}
+              </span>
+              <br />
               <span title="Area Responsible">
                 <span class="text-muted font-size-10">Area</span>
                 {{servicerequest.jurisdiction.name}}
