fix: set assigne backdrop to static

--- a/app/views/servicerequests/_partials/assignee_modal.html
+++ b/app/views/servicerequests/_partials/assignee_modal.html
@@ -10,7 +10,7 @@
       ×
     </button>
     <h4 class="modal-title">
-      Assign Service Request To:
+      Assign Issue
     </h4>
   </div>
   <!-- end modal header -->
